// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputDate > renders with ariaLabel correctly 1`] = `
"<div aria-label="Aria label" data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with as correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with class correctly 1`] = `
"<div data-slot="base" class="max-w-sm" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with default slot correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>Default slot
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with default value correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="1" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-01">
</div>"
`;

exports[`InputDate > renders with disabled correctly 1`] = `
"<div data-slot="base" role="group" aria-disabled="true" data-disabled="" dir="ltr">
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" aria-disabled="true" data-disabled="" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" aria-disabled="true" data-disabled="" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" aria-disabled="true" data-disabled="" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" aria-disabled="true" data-disabled="" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" aria-disabled="true" data-disabled="" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" disabled="" value="">
</div>"
`;

exports[`InputDate > renders with isDateUnavailable correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with leading slot correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div><span data-slot="leading" class="">Leading slot</span>
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with maxValue correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" max="2025-01-31" value="">
</div>"
`;

exports[`InputDate > renders with minValue correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" min="2025-01-01" value="">
</div>"
`;

exports[`InputDate > renders with modelValue correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="1" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-01">
</div>"
`;

exports[`InputDate > renders with neutral variant ghost correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with neutral variant none correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with neutral variant outline correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with neutral variant soft correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with neutral variant subtle correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with pohon correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with primary variant ghost correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with primary variant none correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with primary variant outline correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with primary variant soft correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with primary variant subtle correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`InputDate > renders with readonly correctly 1`] = `
"<div data-slot="base" role="group" data-readonly="" dir="ltr">
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" aria-readonly="true" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" aria-readonly="true" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" aria-readonly="true" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" aria-readonly="true" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" aria-readonly="true" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with separator slot correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with size lg correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with size md correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with size sm correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with size xl correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with size xs correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`InputDate > renders with trailing slot correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if--><span data-slot="trailing" class="">Trailing slot</span><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;
